Form headers can no longer scroll out of view

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -41,13 +41,21 @@ nav {
 }
 .bold { font-weight: bold; }
 .italic { font-style: italic; }
+.overflow-hidden { overflow: hidden; }
+.overflow-auto { overflow: auto; }
+.p-t { padding-top: 1em; }
+.p-b { padding-bottom: 220px; }
+.max-height-hidden { height: 100%; overflow-y: hidden;}
+.max-height-auto { height: 100%; overflow-y: auto;}
+.height-100vh { height: 100vh; }
 
 .App {
   margin: auto;
   text-align: center;
   background-color: #f7f7f7;
-  min-height: 100vh;
+  height: 100vh;
   max-width: 1080px;
+  overflow: hidden;
 }
 
 .appHeader {
@@ -63,6 +71,7 @@ nav {
   border-bottom: 1px solid var(--bg-main-1);
   box-shadow: 0px 4px 12px #e4e4e4;
   z-index: 2;
+  overflow: hidden;
 }
 
 .horizontal-list {
@@ -118,7 +127,6 @@ nav {
   padding: 8px;
   border-bottom: 4px solid #e4e4e4;
   box-shadow: 0px 4px 8px #e4e4e4;
-  margin-bottom: 1em;
   z-index: 1;
 }
 .form {
